# easyplot

./: easyplot.cabal
src/: EasyPlot.hs
